fix right scroll on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -137,7 +137,6 @@ header nav {
 	flex: 1;
 	display: flex;
 	justify-content: flex-end;
-	padding: 20px;
 }
 
 header nav a {
